Credit report files
- One angular format
- One HandlebarJS format

--- a/angular/src/app/tenant/partials/credit-check.tpl.html
+++ b/angular/src/app/tenant/partials/credit-check.tpl.html
@@ -2,5 +2,4 @@
     <a href="#/tenants/myprofile/3" class="next">Next</a> <!--Need to only show once profile is verified-->
 </div>
 
-<div ng-include="'tenant/verify.tpl.html'">
-</div>
+<div ng-include="'tenant/verify.tpl.html'"></div>
