--- a/angular/src/app/tenant/verify.tpl.html
+++ b/angular/src/app/tenant/verify.tpl.html
@@ -1,4 +1,5 @@
-<div class="container">
+<!--Need to hide this container if the profile is already verified-->
+<!--div class="container">
     
 <h1>Verify Profile</h1>
 
@@ -37,13 +38,14 @@
         <input type="submit" value="Verify" class="btn btn-rented">
     </div>
 </div>
-
-<!--div class="col-sm-12">  **Old code**
-    <fieldset class="readonly">
-      <a href="{{profile.creditReport}}" download="{{profile.firstName}}-{{profile.lastName}}-credit-report.pdf" class="field-text" ng-show="profile.creditReport">Download Your Credit Report  <i class="glyphicon glyphicon-cloud-download"></i></a>
-      <span class="text-lg bottom-buffer-xl" ng-hide="profile.creditReport" style="margin-bottom: 70px;">Thank you for completing your profile, Rented Team will contact you shortly.</span>
-    </fieldset>
-</div-->
     
-</div>
+</div-->
+
+<!--Need to hide this container if the profile is pending verification-->
+<div class="container">
+
+    <h1>Profile Verified</h1>
+
+    <!--Need to implement a check to show the credit report once the report is available-->
+    <div ng-include="'tenant/partials/credit-report.tpl.html'"></div>
 </div>
