--- a/angular/src/app/tenant/partials/credit-report-angular.tpl.html
+++ b/angular/src/app/tenant/partials/credit-report-angular.tpl.html
@@ -2,7 +2,7 @@
     <h2>Your Credit Report</h2>
 
 
-    <div ng-if="{{CreditProfile}}">
+    <div ng-if="creditProfile">
 
         <br>
         <p>Report Date: <strong>{{Header.ReportDate}}</strong></p>
