Mock-up changes for Tenant-Experian
Includes several changes to meet Experian mock-up requirements.
Code is not intelligent, comment and uncomment as needed.

--- a/angular/src/app/tenant/partials/credit-report.tpl.html
+++ b/angular/src/app/tenant/partials/credit-report.tpl.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h2>Your Credit Report</h2>
+    <h1>Your Credit Report</h1>
+    <h5>Powered by &nbsp;<img src="assets/img/features/tenants/experian.png" height="60px"></h5>
 
 
     <!--ul class="nav nav-tabs">
