Experian mock-up changes for property and owner
Will need logic to implement automatically. Mockups implemented for
Experian.

--- a/angular/src/app/owner/partials/menu-owner.tpl.html
+++ b/angular/src/app/owner/partials/menu-owner.tpl.html
@@ -1,11 +1,12 @@
 <div class="container">
     <ul class="nav navbar-nav navbar-user">
-       <li><a href="#/owners/add-property" class="first" ng-class="isActive('/owners/add-property')">Add Property</a></li>
+       <li><a href="#/owners/profile" class="first" ng-class="isActive('/owners/profile')" style="color: #5fbc69">My Profile (Verified <i class="glyphicon glyphicon-ok-circle"></i>)</a></li>
+       <!--<li><a href="#/owners/profile" class="first" ng-class="isActive('/owners/profile')" style="color: #ff503f">My Profile (Verify <i class="glyphicon glyphicon-exclamation-sign"></i>)</a></li>-->
+       <li><a href="#/owners/add-property" ng-class="isActive('/owners/add-property')">Add Property</a></li>
        <li><a href="#/owners/dashboard" ng-class="isActive('/owners/dashboard')">My Dashboard</a></li>
        <li><a href="#/owners/properties" ng-class="isActive('/owners/properties')">My Properties</a></li>
        <li><a href="#/owners/tenants" ng-class="isActive('/owners/tenants')">My Tenants</a></li>
-       <li><a href="#/owners/profile" ng-class="isActive('/owners/profile')">My Profile</a></li>
-        <li><a href="#/owners/invite" ng-class="isActive('/owners/invite')">Invite Tenants</a></li>
-        <li><a href="#/owners/doc-center" ng-class="isActive('/owners/doc-center')">Document Center</a></li>
+       <li><a href="#/owners/invite" ng-class="isActive('/owners/invite')">Invite Tenants</a></li>
+       <li><a href="#/owners/doc-center" ng-class="isActive('/owners/doc-center')">Document Center</a></li>
     </ul>
 </div>
