--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form name="profileForm" method="post" class="form-horizontal bottom-buffer-xl" ng-class="{ 'show-errors': showErrors }">
 
-        <button type="button" class="btn btn-rented pull-right" ng-click="save(profile,password)">Save</button>
+        <button type="button" class="btn btn-rented pull-right left-buffer" ng-click="save(profile,password)">Save</button>
 
         <h1>My Profile</h1>
 
@@ -53,6 +53,9 @@
                                </div>
                            </div>
                        </div>
+                   </div>
+                   <div class="row col-sm-12 top-buffer">
+                       <a href="#/owners/verify" class="control-label" style="color: #ff503f">Verify Profile</a>
                    </div>
                </div>
            </div>
