--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -34,6 +34,15 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-xs-12 text-left">
+            <label class="top-buffer">
+                <input type="checkbox" required> &nbsp; You understand that by clicking on the APPLY button immediately following this notice, you are providing ‘written instructions’ to Rented under the Fair Credit Reporting Act authorizing Rented to obtain information from your personal profile or other information from Experian. You authorize Rented to obtain such information solely to share your report with owners/managers of the rental properties for which you submit applications online. To view the complete Terms of Service please visit <a href="https://rented.co/#/terms" target="_blank">https://rented.co/#/terms</a>.
+            </label>
+            <!-- There is a bug that if Edit Application is hit a user can uncheck this box; need to fix -->
+        </div>
+    </div>
+
     <div class="row" style="margin-top: 30px;">
         
         <div class="col-xs-6 text-center">
