--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -13,6 +13,7 @@
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">View Property</a>
             <button class="btn btn-rented" ng-click="cancelBid(property)" ng-hide="(!property.bestOffer)||(property.bestOffer.userId==profile.$id&&property.bestOffer.accepted)">Cancel My Offer</button>
+            <button class="btn btn-rented">Unshare Credit Report</button>
         </div>
     </div>
 
