Changes for Experian phone number
- Home page changes including footer with phone number

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -2,7 +2,7 @@
     <div class="container homepage-drawing">
         <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
            <h1>Renting Made Easy</h1>
-           <h4><em>Rent to and from people you know and trust</em></h4>
+           <h4><em>Rent to and from people you can trust</em></h4>
            <h3><small>It's free to sign up and always will be</small></h3>
             
            <div class="row" style="margin-top: 30px;">
