added mandrill, prerender and mixpanel integration & code refactoring

--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -3,6 +3,11 @@
   background-color: #3B5998;
   border-color: #133783;
 }
+.btn-linkedin {
+  color: #fff;
+  background-color: #BF91AB;
+  border-color: #BF91AB;
+}
 
 .btn-twitter {
   color: #fff;
