--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
+<div class="navbar navbar-inverse navbar-static-top" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -20,10 +20,25 @@
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="signup">Sign up</a></li>
         <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="login">Login</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">Hello <strong>{{getCurrentUser().username}}</strong></p> </li>
-        <li ng-show="isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><span class="glyphicon glyphicon-cog"></span></a></li>
-        <li ng-show="isLoggedIn()"><a ui-sref="logout">Logout</a></li>
+        <li ng-show="isLoggedIn()"><p class="navbar-text">Hello <strong>{{getCurrentUser().username}}</strong></p></li>
+        <li dropdown on-toggle="toggled(open)" ng-show="isLoggedIn()" ui-sref-active="active">
+          <a dropdown-toggle>
+            <i class="glyphicon glyphicon-cog"></i> Settings
+          </a>
+          <ul class="dropdown-menu">
+          <li><a ui-sref="settings"><i class="fa fa-key"></i> Change password</a></li>
+          <li><a ui-sref="userInfo"><i class="fa fa-user"></i> Change user info</a></li>
+          <li><a ui-sref="paymentDetails"><i class="fa fa-credit-card"></i> Change payment details</a></li>
+        </ul>
+        </li>
+        <li ng-show="isLoggedIn()"><a ui-sref="logout"><i class="fa fa-sign-out"></i> Logout</a></li>
       </ul>
     </div>
   </div>
+
+
+
+
+
 </div>
+
