--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -26,7 +26,7 @@
             <i class="glyphicon glyphicon-cog"></i> Settings
           </a>
           <ul class="dropdown-menu">
-          <li><a ui-sref="settings"><i class="fa fa-key"></i> Change password</a></li>
+          <li><a ui-sref="password"><i class="fa fa-key"></i> Change password</a></li>
           <li><a ui-sref="userInfo"><i class="fa fa-user"></i> Change user info</a></li>
           <li><a ui-sref="paymentDetails"><i class="fa fa-credit-card"></i> Change payment details</a></li>
         </ul>
