Experian compliance changes 8.5.7 and 8.5.12

--- a/angular/src/app/owner/profile.tpl.html
+++ b/angular/src/app/owner/profile.tpl.html
@@ -55,7 +55,8 @@
                        </div>
                    </div>
                    <div class="row col-sm-12 top-buffer">
-                       <a href="#/owners/verify" class="control-label" style="color: #ff503f">Verify Profile</a>
+                       <!--<a href="#/owners/verify" class="control-label" style="color: #ff503f">Verify Profile</a>-->
+                       <a href="#/owners/verify" class="control-label" style="color: #5fbc69">Verified</a>
                    </div>
                </div>
            </div>
@@ -119,7 +120,7 @@
         </fieldset>
 
         <fieldset>
-           <legend>Change Password</legend>
+           <legend>Change Password (required every 90 days)</legend>
 
             <p class="text-lg bottom-buffer">Please leave those fields blank if you don't intend to change your password</p>
 
