--- a/angular/src/app/tenant/partials/profile-page-2.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-2.tpl.html
@@ -216,7 +216,7 @@
 </fieldset>
 
 <fieldset>
-   <legend>Change Password</legend>
+   <legend>Change Password (required every 90 days)</legend>
 
     <p class="text-lg bottom-buffer">Please leave those fields blank if you don't intend to change your password</p>
 
