--- a/angular/src/app/tenant/verify.tpl.html
+++ b/angular/src/app/tenant/verify.tpl.html
@@ -42,11 +42,11 @@
 </div-->
 
 <!--Need to hide this container if the profile is pending verification-->
-<div class="container">
+<!--<div class="container">-->
 
-    <!--Need to implement a check to show the credit report once the report is available-->
-    <div ng-include="'tenant/partials/credit-report.tpl.html'"></div>
-</div>
+    <!--&lt;!&ndash;Need to implement a check to show the credit report once the report is available&ndash;&gt;-->
+    <!--<div ng-include="'tenant/partials/credit-report.tpl.html'"></div>-->
+<!--</div>-->
 
 <!--Need to hide this container if the profile is pending verification-->
 <!--<div class="container">-->
@@ -56,8 +56,8 @@
 <!--</div>-->
 
 <!--Need to hide this container if the credit report is done-->
-<!--<div class="container">-->
+<div class="container">
 
-    <!--<!--Need to implement a check to show the credit report once the report is available-->-->
-    <!--<div ng-include="'tenant/partials/request-credit-report.tpl.html'"></div>-->
-<!--</div>-->
+    <!--Need to implement a check to show the credit report once the report is available-->
+    <div ng-include="'tenant/partials/request-credit-report.tpl.html'"></div>
+</div>
