--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -533,7 +533,7 @@
 </fieldset>
 
 <fieldset>
-   <legend>Change Password</legend>
+   <legend>Change Password (required every 1 year)</legend>
 
     <p class="text-lg bottom-buffer">Please leave those fields blank if you don't intend to change your password</p>
 
