--- a/angular/src/app/tenant/partials/request-credit-report.tpl.html
+++ b/angular/src/app/tenant/partials/request-credit-report.tpl.html
@@ -1,18 +1,19 @@
-<h1>Request Credit Report</h1>
+<!--<h1>Request Credit Report</h1>-->
+<h1>View Credit Report</h1>
 <h5>Data provided by &nbsp;<img src="assets/img/features/tenants/experian.png" height="60px"></h5>
 
 <!-- Asking tenant approval to verify their identity -->
 
-<div class="row col-sm-12">
+<!--<div class="row col-sm-12">-->
 
-    <label class="top-buffer">
-        <input type="checkbox"> &nbsp; You understand that by clicking on the I AGREE button immediately following this notice, you are providing ‘written instructions’ to Rented under the Fair Credit Reporting Act authorizing Rented to obtain information from your personal profile or other information from Experian. You authorize Rented to obtain such information solely to share your report with owners/managers of the rental properties for which you submit applications online and/or to view the report for your personal use. To view the complete Terms of Service please visit <a href="https://rented.co/#/terms" target="_blank">https://rented.co/#/terms</a>.
-    </label>
-    <div class="row">
-        <div class="col-xs-3 center text-center top-buffer">
-            <input type="submit" value="Request Credit Report" class="btn btn-rented">
-        </div>
-</div>
+    <!--<label class="top-buffer">-->
+        <!--<input type="checkbox"> &nbsp; You understand that by clicking on the I AGREE button immediately following this notice, you are providing ‘written instructions’ to Rented under the Fair Credit Reporting Act authorizing Rented to obtain information from your personal profile or other information from Experian. You authorize Rented to obtain such information solely to share your report with owners/managers of the rental properties for which you submit applications online and/or to view the report for your personal use. To view the complete Terms of Service please visit <a href="https://rented.co/#/terms" target="_blank">https://rented.co/#/terms</a>.-->
+    <!--</label>-->
+    <!--<div class="row">-->
+        <!--<div class="col-xs-3 center text-center top-buffer">-->
+            <!--<input type="submit" value="Request Credit Report" class="btn btn-rented">-->
+        <!--</div>-->
+<!--</div>-->
 
 
 <!-- Congratulations message to user  -->
@@ -31,3 +32,26 @@
         <!--</div>-->
     <!--</div>-->
 <!--</div>-->
+
+<form method="post" class="form-horizontal top-buffer" ng-submit="login()">
+
+    <div class="row vertical-buffer">
+        <div class="col-xs-6 center text-center">
+            <p>Please re-enter your password before viewing your credit report</p>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-3 control-label">Password</label>
+        <div class="col-sm-8">
+            <input type="password" class="form-control input-lg" ng-model="data.pass" ngMinLength="8" required>
+        </div>
+    </div>
+
+    <div class="row" style="padding-bottom: 50px;">
+        <div class="col-xs-3 center text-center">
+            <input type="submit" value="Submit" ng-hide="createMode" class="btn btn-rented">
+        </div>
+    </div>
+
+</form>
