--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -27,6 +27,7 @@
         <li ng-show="isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><i class="glyphicon glyphicon-cog"></i> Settings</a></li>
         <li ng-show="isLoggedIn()"  ui-sref-active="active"><a ui-sref="logout"><i class="fa fa-sign-out"></i> Logout</a></li>
       </ul>
+      <div style="color:white; margin-top:18px; font-size:13px" ng-hide="isMailconfirmed() || !isLoggedIn()">Your email address is not confirmed. Confirm <a href="/confirm">here</a></div>
     </div>
   </div>
 
