fixed SQL file reference bug

--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="navbar transparent" ng-controller="NavbarCtrl">
-    <nav class="navbar transparent">
+  <div ng-controller="NavbarCtrl">
+    <nav ng-class="{navbar:true, transparent: !isLoggedIn(), picture:isLoggedIn()}">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
