--- a/client/app/app.css
+++ b/client/app/app.css
@@ -259,6 +259,13 @@ h3{
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
+.footer {
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 70px;
+  border-top: 1px solid #E5E5E5;
+  clear: both;
+}
 
 body {
   padding-bottom: 40px;
@@ -397,6 +404,52 @@ body {
   }
 }
 
+.slide.ng-hide-add,
+.slide.ng-hide-remove {
+  -webkit-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  transition: all linear 0.5s;
+  display: block!important;
+}
+.slide.ng-hide-add.ng-hide-add-active,
+.slide.ng-hide-remove {
+  opacity: 0;
+}
+.slide.ng-hide-add,
+.slide.ng-hide-remove.ng-hide-remove-active {
+  opacity: 1;
+}
+
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+.center-grey {
+  background: #f2f2f2;
+}
+.slider {
+  position: relative;
+  padding: 5px;
+  width: 610px;
+  margin: auto;
+  margin-top: 40px;
+}
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 0px 0px 15px #999;
+}
+/*.arrows1 {*/
+  /*position: absolute;*/
+  /*top: 10px;*/
+  /*left: 500px;*/
+/*}*/
+/*.arrows1 {*/
+  /*position: absolute;*/
+  /*top: 10px;*/
+  /*right: 500px;*/
+/*}*/
 
 
 
